don't hide cell content behind pivot table buttons, fdo#60877

Change-Id: I1508aafcc7046c576a4d6de87900dc66f32b2f97